Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
0.15.0
Description
Minimal reproducer:
import pyarrow as pa
pa.chunked_array([pa.array([], type=pa.string()).dictionary_encode().dictionary])
Traceback
(lldb) bt * thread #1, queue = 'com.apple.main-thread', stop reason = EXC_BAD_ACCESS (code=1, address=0x20) * frame #0: 0x0000000112cd5d0e libarrow.15.dylib`arrow::Status arrow::internal::ValidateVisitor::ValidateOffsets<arrow::BinaryArray const>(arrow::BinaryArray const&) + 94 frame #1: 0x0000000112cc79a3 libarrow.15.dylib`arrow::Status arrow::VisitArrayInline<arrow::internal::ValidateVisitor>(arrow::Array const&, arrow::internal::ValidateVisitor*) + 915 frame #2: 0x0000000112cc747d libarrow.15.dylib`arrow::Array::Validate() const + 829 frame #3: 0x0000000112e3ea19 libarrow.15.dylib`arrow::ChunkedArray::Validate() const + 89 frame #4: 0x0000000112b8eb7d lib.cpython-37m-darwin.so`__pyx_pw_7pyarrow_3lib_135chunked_array(_object*, _object*, _object*) + 3661
Attachments
Issue Links
- is related to
-
ARROW-8339 [C++] Possibly allow null offsets and/or data buffer for BaseBinaryArray for 0-length arrays
- Open
- links to