ARROW-7008: [C++/Python] value_offsets may be omitted for 0-len arrays