cpp/src/arrow/array.cc
@@ -1322,6 +1322,10 @@ struct ValidateVisitor {
     if (array.length() && !value_offsets) {
       return Status::Invalid("value_offsets_ was null");
     }
+    if (array.length() == 0 && !value_offsets) {
+      // In the case of an empty array value_offset may be omitted.
+      return Status::OK();
+    }
     if (value_offsets->size() / static_cast<int>(sizeof(offset_type)) < array.length()) {
       return Status::Invalid("offset buffer size (bytes): ", value_offsets->size(),
                              " isn't large enough for length: ", array.length());
